# todoservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  post_sample_data.sh  pyproject.toml
.github/workflows/: deploy-to-aks.yml
infrastructure/k8s/: deployment.yaml  otel-collector.yaml  otel-service.yaml  todo-ingress.yaml  todo-service.yaml
infrastructure/terraform/: main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
src/: app.py  gunicorn.conf.py
