[tool.poetry]
name = "home-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pip = "^25.0"
psycopg2-binary = "^2.9"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^22.0.0"
marshmallow = "^3.21.3"
opentelemetry-distro = "0.51b0"
opentelemetry-exporter-otlp = "^1.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
